fix mobile spacing for construction page

--- a/src/components/styles/construction-page.scss
+++ b/src/components/styles/construction-page.scss
@@ -25,3 +25,14 @@
     filter: blur(10px);
     margin: -20px;
 }
+
+@media only screen and (max-width: 450px) {
+    .construction-page {
+        padding: 20px 25px;
+        width: 75%;
+    
+        & h1 {
+            font-size: (75px * .75);
+        }
+    }
+}
